[package]
authors = [
    "Jonas Schievink <jonasschievink@gmail.com>", 
    "Jean-Michel Picod <jmiche@google.com>"
]
description = "An embedded BLE stack"
categories = ["embedded", "no-std"]
keywords = ["arm", "ble", "bluetooth", "low", "energy"]
repository = "https://github.com/jmichelp/rubble/"
readme = "../README.md"
license = "0BSD"
name = "rubble"
version = "0.0.5"
edition = "2021"

[dependencies]
bitflags = "2.3.2"
fugit = "0.3.7"
heapless = "0.7.16"
rand_core = "0.6.4"
sha2 = { version = "0.10.7", default-features = false }
zerocopy = "0.7.25"
defmt = "0.3.5"
p256 = { version="0.13.2", default-features = false, features = ["arithmetic"]}
ring = { version = "0.16.20", default-features = false, optional = true }
log = { version = "0.4.19", optional = true }

[dev-dependencies]
p256 = { version = "0.13.2", default-features = false, features = ["arithmetic"]}
ring = "0.16.20"
